2012-03-29  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/tcl.m4:               [Bug 3511806] Compiler checks too early
	* unix/configure.in:         This change allows to build the cygwin
	* unix/configure:            and mingw32 ports of Tcl/Tk to build
	* win/tcl.m4:                out-of-the-box using a native or cross-
	* win/configure.in:          compiler.
	* win/configure:

2012-03-27  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tcl.h:             [Bug 3508771] Wrong Tcl_StatBuf used on MinGW
	* generic/tclFCmd.c:         [Bug 2015723] duplicate inodes from file stat on windows

2012-03-24  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclInt.decls:      [Bug 3508771] load tclreg.dll in cygwin tclsh
	* generic/tclIntPlatDecls.h: Implement TclWinConvertError, TclWinConvertWSAError,
	* generic/tclStubInit.c:     and various more win32-specific internal functions for 
	* unix/Makefile.in:          Cygwin, so win32 extensions using those can be
	* unix/tcl.m4:               loaded in the cygwin version of tclsh.
	* unix/configure:
	* win/tclWinError.c:

2012-03-20  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tcl.h:             [Bug 3288345] Wrong Tcl_StatBuf used on Cygwin
	* unix/tclUnixFile.c
	* unix/tclUnixPort.h
	* win/tclWinFile.c           Remove cygwin stuff no longer needed
	* win/tclWinPort.h

	* generic/tcl.decls:         [Bug 3508771] load tclreg.dll in cygwin tclsh
	* generic/tclInt.decls:      Implement TclWinGetPlatformId, Tcl_WinUtfToTChar,
	* generic/tclIntPlatDecls.h: Tcl_WinTCharToUtf (and a dummy TclWinCPUID) for 
	* generic/tclPlatDecls.h:    Cygwin, so win32 extensions using those can be
	* generic/tclStubInit.c:     loaded in the cygwin version of tclsh.
	* unix/tclUnixCompat.c:

2012-03-12  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tclWinFile.c: [Bug 3388350] mingw64 compiler warnings

2012-03-07  Andreas Kupries  <andreask@activestate.com>

	* library/http/http.tcl: [Bug 3498327]: Generate upper-case